--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Huntsman Gazette</title>
+
+
+
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Euphoria+Script&display=swap" rel="stylesheet">
@@ -9,7 +16,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
-
+</head>
 <br><br>
 
 <div class="news">
