--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="newsHeader">
         <h1><span style="font-family: 'Euphoria Script', cursive; text-transform: capitalize; line-height: 0.1;">The
             </span><br>Huntsman Gazette</h1>
-        <div class="headerInfo" style="margin-top: -20px;">
+        <div class="headerInfo" style="margin-top: 30px;">
             Published: 06 January 2021 - 21st Edition - Exclusive
         </div>
     </div>
@@ -204,7 +204,7 @@
                     </p>
                 </div>
                 <div class="column" style="width: 27%;">
-                    <video style="transform:rotateZ(-90deg); width: 470px;position: relative; top: 105px; left: -105;"
+                    <video style="transform:rotateZ(-90deg); width: 470px;position: relative; top: 105px; left: -105px;"
                         autoplay loop muted>
                         <source src="tweedcomp.mp4" type="video/mp4">
                     </video>
