--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </h1>
             <div class="wrap">
                 <div class="col1">
-                    <img class="circleIMG" src="cutter.png" width="400" height="400" alt="Centred Image">
+                    <img class="circleIMG" src="cutter.png" width="400" height="400" alt="Centred Image" style="z-index: 10;">
                     <div class="inner">
                         <p class="">Unable to resist a challenge, Huntsman’s Co Head Cutter, Dario Carnera, turned his
                             bespoke skills to Huntsman’s largest challenge to date! The cutting and stitching of a
