--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Huntsman Gazette</title>
+    <title>Huntsman Gazette</title>
 
 
 
-<link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Euphoria+Script&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Eczar:wght@600&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Euphoria+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
 </head>
 <br><br>
 
@@ -177,6 +178,7 @@
         </div>
     </div>
 </div>
+
 <div class="break">
 </div>
 <div class="news">
@@ -264,6 +266,70 @@
 <div class="news">
     <div class="newsBodyContainer">
         <div class="newsBody">
+            <h1 class="mainTitle">
+                THE SHOOTING QUIZ
+            </h1>
+            <p class="dropCap">
+                Whilst many enjoyed the Huntsman Tweed competition, it bought back some nostalgia to
+                those pleasant weekends spent in the field and at the peg, and so with the shooting season
+                disrupted or put on hold indefinitely ,we offered the opportunity to test your shooting acumen
+                and keep up to scratch with the Huntsman Shooting Quiz. Presented in partnership with
+                Roxtons, with questions compiled by some of the keenest sportsmen and women, you had
+                to beat the clock with 43 brain teasers, from the top speed of grouse, to the inventor of the
+                breech loading shotgun.</p>
+            <p style="text-align: center; font-style: italic; font-size: 22px;" class="fancy-border">Mr Michael Acland
+                got top marks, and in record time,
+                and will now enjoy future shooting
+                parties in a new bespoke Huntsman jacket, as the winner of the quiz.</p>
+            <div class="row">
+                <div class="column" style="width: 38%; padding-left: 0;">
+                    <img src="shootquiz.jpg">
+                </div>
+                <div class="column" style="width: 57%; position: relative;">
+                    <h1>
+                        Download the quiz with full correct answers to share with friends and family.
+                    </h1>
+                    <img src="shootingman.png" style="
+                   width: 180px;
+position: absolute;
+top: 160px">
+                </div>
+            </div>
+            <hr><br>
+            <h1 class="mainTitle"
+                style="font-size: 63px!important; text-align: center; background-image: url('highlight.png'); background-size: cover;color: rgb(255, 246, 235); margin-top: 0px;">
+                Huntsman x Harrisons
+            </h1>
+            <h1>
+                An exclusive cloth curation for every occasion
+            </h1>
+            <div class="row">
+                <div class="column" style="width: 52%; padding-left: 0;">
+                    <img src="harrisons.jpg" style="width: 100%;">s
+                </div>
+                <div class="column" style="width: 42%;">
+                    <p>
+                        One of the trickiest things when choosing your bespoke garments, is finding the choice of cloth
+                        that is right for you. Fortunately, planning for this season, and indeed seasons to come, our
+                        Head-Cutters Dario Carnera and Campbell Carey and Harrisons’ Managing Director Mark Dunsford
+                        worked together over lockdown to produce a collection of essential clothes for every occasion to
+                        wear at home, at work, as well as outdoors and different social occasions. In a Zoom interview,
+                        the three talk over their every choice and describe what makes this collection so special, plus
+                        garment recommendations. Many of you will have already received your email inviting you to order
+                        samples of these cloths for yourself, but if not you can still order your brochure here for
+                        bespoke commissions in 2021 as well as watching the full interview with Campbell, Dario and
+                        Mark.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="break">
+</div>
+<div class="news">
+    <div class="newsBodyContainer">
+        <div class="newsBody">
             <h1 class="mainTitle"
                 style="font-size: 63px!important; text-align: center; background-image: url('highlight.png'); background-size: cover;color: rgb(255, 246, 235); margin-top: 0px;">
                 Ron Arad x Huntsman x Morgan
@@ -272,7 +338,8 @@
             </h1>
             <div class="wrap">
                 <div class="col1">
-                    <img class="circleIMG" src="cutter.png" width="400" height="400" alt="Centred Image" style="z-index: 10;">
+                    <img class="circleIMG" src="cutter.png" width="400" height="400" alt="Centred Image"
+                        style="z-index: 10;">
                     <div class="inner">
                         <p class="">Unable to resist a challenge, Huntsman’s Co Head Cutter, Dario Carnera, turned his
                             bespoke skills to Huntsman’s largest challenge to date! The cutting and stitching of a
@@ -320,7 +387,6 @@
                     <h1 class="" style="font-size: 38px!important; text-align: left; margin-top: 0px;">
                         FREE PARKING
                     </h1>
-
                     <p>
                         Dario stands with the
                         finished cover.
@@ -328,7 +394,6 @@
                         The installation in 11
                         Savile Row filled the entire front of the
                         shop.
-
                     </p>
                     <p>
                         For all of you that were unable to come visit 11 Savile Row in person, the installation can
@@ -337,7 +402,6 @@
                         until January 2021.
                     </p>
                 </div>
-
             </div>
         </div>
     </div>
