--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
 <br><br>
 
 <div class="news">
-    <h1 style="transform: rotate(-90deg); position: relative; left: -51.5%; top: 535px; font-size: 12px; opacity: 0.5;">
+
+    <h1 style="transform: rotate(-90deg); position: relative; left: -51.3%; top: 535px; font-size: 12px; opacity: 0.5;">
         The Huntsman Gazette - Monthly Exclusive Gazette for the discerning individual
     </h1>
-    <div class="newsHeader">
+    <div class="newsHeader" style="z-index: 10; position: relative;">
         <h1><span style="font-family: 'Euphoria Script', cursive; text-transform: capitalize; line-height: 0.1;">The
             </span><br>Huntsman Gazette</h1>
         <div class="headerInfo" style="margin-top: 30px;">
             Published: 06 January 2021 - 21st Edition - Exclusive
         </div>
     </div>
+    <img src="Mr Hammick_transparent.png" style="
+    width: 130px;
+    position: absolute;
+    top: 94px;
+    z-index: 1;">
     <div class="newsBodyContainer">
         <div class="newsBody">
             <p class="dropCap">
@@ -167,18 +173,18 @@
                         having won first place in the Good Writers Club annual
                         contest of 1966!
                     </p>
-                    <p>
+                    <p style="text-align: center; font-style: italic; font-size: 22px;" class="fancy-border">
                         “I was actually writing a letter to JD Salinger. Hey, I was No.
                         1 among 50,000 entrants anyway!”
                         <br>
-                        Huntsman’s Ed Turco in 1966
                     </p>
+                    Huntsman’s Ed Turco in 1966
+
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 <div class="break">
 </div>
 <div class="news">
@@ -286,11 +292,11 @@
                     <img src="shootquiz.jpg">
                 </div>
                 <div class="column" style="width: 57%; position: relative;">
-                    <h1>
+                    <h1 style="text-align: right;">
                         Download the quiz with full correct answers to share with friends and family.
                     </h1>
                     <img src="shootingman.png" style="
-                   width: 180px;
+                   width: 360px;
 position: absolute;
 top: 160px">
                 </div>
@@ -300,7 +306,7 @@ top: 160px">
                 style="font-size: 63px!important; text-align: center; background-image: url('highlight.png'); background-size: cover;color: rgb(255, 246, 235); margin-top: 0px;">
                 Huntsman x Harrisons
             </h1>
-            <h1>
+            <h1 style="text-align: center;">
                 An exclusive cloth curation for every occasion
             </h1>
             <div class="row">
@@ -403,6 +409,173 @@ top: 160px">
                     </p>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="break">
+</div>
+<div class="news">
+    <div class="newsBodyContainer">
+        <div class="newsBody">
+            <h1 class="mainTitle grunge">
+                Huntsman At Home
+            </h1>
+            <p>
+                With the onset of lockdown closing off entire territories and keeping us indoors, we turned
+                our attention to providing the same unparalleled Savile Row service in the comfort of your
+                own home. We had for some time already begun investment in new technologies which
+                allow us to transport the team to you, overcoming the limitations of time and travel. For you,
+                the Huntsman client, that means providing the same experience of visiting us in store, with
+                our full services available, whilst cutting wait times.
+            </p>
+            <div class="row">
+                <div class="column" style="width: 62%; padding-left: 0; position: relative;">
+                    <img src="sadbot.png" style="
+                    width: 100px;
+                    position: absolute;
+                    top: -16px;
+                    left: 69%;
+                    z-index: 1;">
+                    <h1 class="mainTitle" style="font-size: 34px!important;">
+                        SAY GOODBYE TO CHATBOTS
+                    </h1>
+                    <p class="dropCap">
+                        Spending more time than ever before
+                        online, we shared your frustrations of
+                        talking to chat-bots and waiting for
+                        emails, which is why we introduced
+                        HERO, allowing you to connect live via
+                        video with our team in store. If you’re
+                        shopping online, it’s the easiest way to
+                        enjoy a personal shopping experience
+                        with one of our client managers. You can
+                        check out the latest collection,
+                        accessories and see inside 11 Savile
+                        Row for inspiration.
+                    </p>
+                </div>
+                <div class="column" style="width: 33%;">
+                    <img src="hero.jpg" style="width: 100%;">
+                </div>
+            </div>
+            <div class="row">
+                <div class="column" style="width: 60%; padding-left: 0; position: relative;">
+                    <img src="mto.jpg" style="width: 100%;">
+
+                </div>
+                <div class="column" style="width: 35%;">
+                    <p style="margin-top: 0;" class="dropCap">
+                        COVID has drastically seen changes in
+                        the way we dress,from our
+                        Spring-Summer and Autumn-Winter
+                        Ready To Wear collection of chic
+                        separates to our bespoke orders, take a
+                        peak at Campbell and Dario’s boards and
+                        they’ll tell you that separate trousers,
+                        sports coats and jackets are the order du
+                        jour!
+                        <br><br>
+                        Which is why we’ve launched our Made
+                        To Order service . This new service
+                        enables you to customise our ready to
+                        wear collections, to create one-off pieces
+                        that are exclusive to you. Choose from
+                        over 1000 cloths across our Ready To
+                        Wear collection and personalise your
+                        favourite styles, with a choice of pocket
+                        details, lapels and finishes.
+                        <br><br>
+                        Available in only 4 weeks, and at the same price as our Ready
+                        To Wear collection, it’s the easiest way to build your Huntsman Wardrobe.
+                        For making your Made To Order purchases our team in 11 Savile Row are standing by to
+                        help you every step of the way. Use HERO to video chat live
+                    </p>
+                </div>
+            </div>
+            <h1 style="font-size: 50px;">Up next: Teleporting Bespoke Services</h1>
+            <img src="bespokeTP.jpg" style="width: 100%;">
+
+        </div>
+    </div>
+</div>
+<div class="break">
+</div>
+<div class="news">
+    <div class="newsBodyContainer">
+        <div class="newsBody">
+            <h1 class="mainTitle"
+                style="font-size: 63px!important; text-align: center; background-image: url('highlight.png'); background-size: cover;color: rgb(255, 246, 235); margin-top: 0px;">
+                THE FUTURE OF BESPOKE TAILORING
+            </h1>
+            <p>
+                Inspired by the precision of robotic surgery, Pierre Lagrange, and Head of Retail Taj Phull
+                devised a revolutionary service which transports our Cutters to your home or office without
+                leaving London or New York. Using Omnipresent technology, teleporting Bespoke Services
+                allows you to access your cutter on-demand, without the need to travel or wait.
+                Mr. Hammick is Huntsman’s first telepresence robot. Named after Huntsman’s famed Head
+                Cutter of the 1970s, notoriously the World’s best-dressed man, Mr. Hammick travels with his
+                locally based human assistant, who executes all tasks as directed live by your Cutter from
+                London or New York.
+                Your Cutter will be teleported in your room via Mr. Hammick’s screen and will control Mr.
+                Hammick remotely to maneuver around your body. They can zoom in with telescopic
+                precision, record, and photograph details of your garments during your fitting.
+                We first launched our Teleporting Bespoke Services in Asia, earlier this year, where clients
+                have already begun enjoying uninterrupted bespoke service, despite lockdown!
+                Coming at the start of 2021 Mr Hammick will be joining Ed and the team in the US, giving an
+                even greater level of availability to the team! If you’re not able to join us on one of our regular
+                trunk shows across America, you can book an appointment with Ed, Ralph and Mr Hammick
+                at your leisure.
+            </p>
+            <div class="row">
+                <div class="column" style="width: 55%;">
+                    <img src="nythammick.jpg" style="width: 100%;">
+                </div>
+                <div class="column" style="width: 40%; position: relative;">
+
+                    <h1 style="font-size:35px!important; margin-top: 0px;">
+                        In The Press: Dario and Mr Hammick Make Headlines!
+                    </h1>
+                    <p class="dropCap">
+                        We invited David Segal of the New York Times
+                        to experience Mr Hammick in action, with Dario
+                        conducting a Teleporting Bespoke Fitting from
+                        the clubroom of 11 Savile Row, you can check
+                        out the full article, which made front page news.
+                        Check out the full article here , for all the ways
+                        we’re beating COVID with new initiatives, or
+                        visit huntsmansavilerow.com to find more about
+                        our Teleporting Bespoke Services.
+                    </p>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="column" style="width:70%; padding-left: 0; position: relative;">
+                    <h1 class="mainTitle grunge"
+                        style="text-align: center; margin-top: 0px; font-size: 48px!important;">Huntsman
+                        Home:<br><br><span style="font-size: 100px; line-height: 22px;">Bespoke <br><span
+                                style="font-size: 82.5px;">Interiors</span> </h1>
+                </div>
+                <div class="column" style="width: 26%;">
+                    <img src="home.jpg" style="width: 100%;">
+
+                </div>
+
+            </div>
+            <p>
+                For those of you who have been inside the Clubroom at 11
+                Savile Row, you’ll recognize our House Tweed wallpaper.
+                We received so many compliments and requests, this
+                exclusive design is now available to buy online , but why
+                stop there? We can produce a range of beautiful, bespoke
+                soft furnishings in our exclusive house cloths for you to
+                enjoy. From bolsters to scatter cushions, throws and
+                lampshades, Huntsman Homewear brings the
+                sophistication of Savile Row to your own home.
+                Why not chat to us about bespoke commissions for your home and discover what we can
+                create for you?
+            </p>
+            <img src="sofa.jpg">
         </div>
     </div>
 </div>
