--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 
 <head>
     <title>Huntsman Gazette</title>
-
-
-
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Euphoria+Script&display=swap" rel="stylesheet">
@@ -21,22 +18,27 @@
 <br><br>
 
 <div class="news">
-
-    <h1 style="transform: rotate(-90deg); position: relative; left: -51.3%; top: 535px; font-size: 12px; opacity: 0.5;">
-        The Huntsman Gazette - Monthly Exclusive Gazette for the discerning individual
-    </h1>
-    <div class="newsHeader" style="z-index: 10; position: relative;">
-        <h1><span style="font-family: 'Euphoria Script', cursive; text-transform: capitalize; line-height: 0.1;">The
-            </span><br>Huntsman Gazette</h1>
-        <div class="headerInfo" style="margin-top: 30px;">
-            Published: 06 January 2021 - 21st Edition - Exclusive
+    <div class="row">
+        <div class="column" style="width: 15%;">
+            <img src="Mr Hammick_transparent.png" style="
+            width: 140px;
+            position: block;
+            top: 94px;
+            z-index: 1;">
         </div>
+        <div class="column" style="width: 80%; position: relative;">
+            <div class="newsHeader" style="z-index: 10; position: relative;">
+                <h1 style="text-align: left!important;"><span
+                        style="font-family: 'Euphoria Script', cursive; text-transform: capitalize; line-height: 0.1; ">The
+                    </span><br>Huntsman Gazette</h1>
+            </div>
+            <div class="headerInfo">
+                Published: 06 January 2021 - 21st Edition - Exclusive
+            </div>
+        </div>
+
     </div>
-    <img src="Mr Hammick_transparent.png" style="
-    width: 130px;
-    position: absolute;
-    top: 94px;
-    z-index: 1;">
+    <br>
     <div class="newsBodyContainer">
         <div class="newsBody">
             <p class="dropCap">
@@ -547,7 +549,6 @@ top: 160px">
                         our Teleporting Bespoke Services.
                     </p>
                 </div>
-
             </div>
             <div class="row">
                 <div class="column" style="width:70%; padding-left: 0; position: relative;">
